CSS hack to fix intermittent bug where auto-complete suggestions appeared behind modal.
Please see this screenshot for an example:
http://img705.imageshack.us/img705/240/autocompletebehindmodal.png

--- a/app/assets/stylesheets/rails_admin/aristo/jquery-ui-1.8.7.custom.css.scss
+++ b/app/assets/stylesheets/rails_admin/aristo/jquery-ui-1.8.7.custom.css.scss
@@ -385,7 +385,7 @@
  * http://docs.jquery.com/UI/Autocomplete#theming
  */
 .ui-autocomplete {
-	position: absolute; cursor: default; z-index: 3;
+	position: absolute; cursor: default; z-index: 1051 !important;
 		-moz-border-radius: 0; 
 		-webkit-border-radius: 0;
 		border-radius: 0;
